fix header covering backdrop

--- a/resources/assets/src/core/global.scss
+++ b/resources/assets/src/core/global.scss
@@ -1,6 +1,6 @@
 
 /* ==========================================================================
-  Styling
+  Foundation
   ========================================================================== */
 
   body {
@@ -8,6 +8,10 @@
     flex: 1;
     flex-direction: column;
   }
+
+/* ==========================================================================
+  Components
+  ========================================================================== */
 
   .Progress {
     position: absolute;
@@ -17,4 +21,10 @@
     width: 100%;
   }
 
+/* ==========================================================================
+  Vue Material
+  ========================================================================== */
 
+  .md-dialog-container {
+    z-index: 3 !important;
+  }
